--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,8 @@
 html {
   background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
+  background-image: -webkit-linear-gradient(1deg, #171717 25%, #D6D2C4 75%);
   background-repeat: no-repeat;
-  min-height: 1000px;
+  min-height: 100%;
   font-family: 'helvetica neue';
   text-align: center;
 }
@@ -21,7 +21,7 @@ h1 {
 }
 
 #heading {
-  background-color: #A683E3;
+  background-color: #D6D2C4;
   text-align: center;
 }
 
@@ -29,7 +29,7 @@ h1 {
   min-height: 70px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #F1F1F1;
+  border-bottom: 1px solid #D6D2C4;
 }
 
 .item:last-child {
@@ -38,7 +38,7 @@ h1 {
 
 input:checked+p {
   text-decoration: line-through;
-  text-decoration-color: #A683E3;
+  text-decoration-color: #171717;
 }
 
 input[type="checkbox"] {
@@ -48,8 +48,9 @@ input[type="checkbox"] {
 p {
   margin: 0;
   padding: 20px;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 200;
+  font-family: sans-serif;
   color: #00204a;
 }
 
@@ -71,10 +72,10 @@ button {
   width: 50px;
   border-radius: 50%;
   border-color: transparent;
-  background-color: #A683E3;
-  color: #fff;
+  background-color: #171717;
+  color: #D6D2C4;
   font-size: 30px;
-  padding-bottom: 6px;
+  padding-bottom: 2px;
   border-width: 0;
 }
 
@@ -91,11 +92,11 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #A683E3;
+  box-shadow: inset 0 -3px 0 0 #171717;
 }
 
 ::placeholder {
-  color: grey;
+  color: #D6D2C4;
   opacity: 1;
 }
 
@@ -103,4 +104,46 @@ footer {
   color: white;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
+}
+
+.previous
+{
+  position : absolute;
+  top: 53px;
+  left: 30%;
+
+  padding-bottom : 7px;
+}
+
+.previous:focus
+{
+  background-color: #444444;
+}
+
+
+.next
+{
+  position : absolute;
+  top: 53px;
+  right: 30%;
+
+  padding-bottom : 7px;
+}
+
+@media (max-width:900px)
+{
+  .next
+  {
+  right : 15%;
+}
+
+  .previous
+  {
+    left : 15%;
+  }
+}
+
+.next:focus
+{
+  background-color: #444444;
 }
